--- a/package.json
+++ b/package.json
@@ -18,5 +18,12 @@
   "bugs": {
     "url": "https://github.com/AlphaGhostUSMC/SkyWise2.0/issues"
   },
-  "homepage": "https://github.com/AlphaGhostUSMC/SkyWise2.0#readme"
+  "homepage": "https://github.com/AlphaGhostUSMC/SkyWise2.0#readme",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongodb": "^5.5.0",
+    "path": "^0.12.7"
+  }
 }
